--- a/ads-project/package.json
+++ b/ads-project/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "angularjs-seed",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
-  "devDependencies": {
-    "phantomjs" : "~1.9",
-    "karma" : "~0.10",
-    "karma-junit-reporter" : "~0.1",
-    "karma-jasmine" : "~0.1",
-    "protractor" : "~0.17.0"
-  }
+	"name": "Ads-Angular",
+	"version": "1.0.0",
+	"description": "SPA Course Project",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"SPA",
+		"AngularJS"
+	],
+	"author": "VVaklinov",
+	"license": "MIT",
+	"dependencies": {
+		"angular": "^1.3.8",
+		"angular-local-storage": "^0.1.5",
+		"angular-resource": "^1.3.8",
+		"angular-route": "^1.3.8",
+		"bootstrap": "^3.3.1",
+		"jquery": "^2.1.3",
+		"noty": "^2.3.4"
+	}
 }
